--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "megumi/advanced-search",
+    "name": "megumi/wp-advanced-search",
     "authors": [
         {
             "name": "Takayuki Miyauchi",
